--- a/数据结构题目/暑假算法练习.md
+++ b/数据结构题目/暑假算法练习.md
@@ -4099,3 +4099,227 @@ class Solution {
 }
 ```
 
+
+
+### 八十八、乘积最大子数组
+
+1. **初始化：**
+   - `maxProduct` 和 `minProduct` 分别存储当前子数组中乘积的最大值和最小值。它们都初始化为数组的第一个元素。
+   - `result` 记录全局的最大乘积。
+2. **遍历数组：**
+   - 从第二个元素开始遍历数组。
+   - 如果当前元素是负数，由于负数乘以一个较大的正数会变成较小的负数，而乘以一个较小的负数会变成较大的正数，因此需要交换 `maxProduct` 和 `minProduct`。
+   - 更新 `maxProduct` 和 `minProduct`：它们要么继续扩展当前的子数组（乘以当前元素），要么重新从当前元素开始。
+   - 更新 `result`，使其保存全局的最大乘积。
+3. **返回结果：**
+   - 最后返回 `result`，即乘积最大的子数组的乘积。
+
+```java
+public class Solution {
+    public int maxProduct(int[] nums) {
+        // 初始化
+        int maxProduct = nums[0];
+        int minProduct = nums[0];
+        int result = nums[0];
+
+        // 遍历数组
+        for (int i = 1; i < nums.length; i++) {
+            int current = nums[i];
+
+            // 如果当前数为负数，则交换最大值和最小值
+            if (current < 0) {
+                int temp = maxProduct;
+                maxProduct = minProduct;
+                minProduct = temp;
+            }
+
+            // 更新最大值和最小值
+            maxProduct = Math.max(current, maxProduct * current);
+            minProduct = Math.min(current, minProduct * current);
+
+            // 更新结果
+            result = Math.max(result, maxProduct);
+        }
+
+        return result;
+    }
+}
+```
+
+
+
+### 八十九、分割等和子集
+
+```java
+class Solution {
+    public boolean canPartition(int[] nums) {
+        if(nums == null || nums.length == 0) return false;
+        int n = nums.length;
+        int sum = 0;
+        for(int num : nums) {
+            sum += num;
+        }
+        //总和为奇数，不能平分
+        if(sum % 2 != 0) return false;
+        int target = sum / 2;
+        int[] dp = new int[target + 1];
+
+        // 先遍历物品
+        for(int i = 0; i < n; i++) {
+            // 再遍历背包，且为倒序
+            for(int j = target; j >= nums[i]; j--) {
+                //物品 i 的重量是 nums[i]，其价值也是 nums[i]
+                dp[j] = Math.max(dp[j], dp[j - nums[i]] + nums[i]);
+            }
+           
+            //剪枝
+            if(dp[target] == target)
+                return true;
+        }
+        return dp[target] == target;
+    }
+}
+```
+
+
+
+### 九十、最长有效括号
+
+1. **动态规划数组初始化：**
+   - `dp[i]` 表示以 `s[i]` 结尾的最长有效括号长度。初始化时所有元素都为0。
+2. **遍历字符串：**
+   - 从索引 `1` 开始遍历字符串，因为单个字符肯定无法构成有效的括号。
+   - 如果 `s[i]` 是 `)` ，有两种情况需要考虑：
+     - **情况1**：如果前一个字符 `s[i-1]` 是 `(`，即形成了一个直接的“()”，那么 `dp[i]`=`dp[i-2] + 2`，其中 `dp[i-2] 是前面子串的最长有效括号长度。
+     - **情况2**：如果前一个字符 `s[i-1]` 是 `)`，且在 `s[i-1]` 所形成的最长有效括号的前一个字符是 `(`，那么可以将当前的 `)` 与它匹配，并加上之前的长度。
+3. **更新最大长度：**
+   - 每次更新 `maxLen` 为当前的最大值。
+4. **返回结果：**
+   - 遍历完字符串后，`maxLen` 即为最长有效括号子串的长度。
+
+```java
+public class Solution {
+    public int longestValidParentheses(String s) {
+        int maxLen = 0;
+        int n = s.length();
+        int[] dp = new int[n]; // dp[i] 表示以 s[i] 结尾的最长有效括号长度
+
+        for (int i = 1; i < n; i++) {
+            if (s.charAt(i) == ')') {
+                if (s.charAt(i - 1) == '(') {
+                    // 情况1：直接匹配 "()" 形式
+                    dp[i] = (i >= 2 ? dp[i - 2] : 0) + 2;
+                } else if (i - dp[i - 1] > 0 && s.charAt(i - dp[i - 1] - 1) == '(') {
+                    // 情况2：匹配类似 "...))" 的形式
+                    dp[i] = dp[i - 1] + ((i - dp[i - 1]) >= 2 ? dp[i - dp[i - 1] - 2] : 0) + 2;
+                }
+                maxLen = Math.max(maxLen, dp[i]);
+            }
+        }
+
+        return maxLen;
+    }
+}
+
+```
+
+
+
+### 九十一、不同路径
+
+```java
+class Solution {
+    public int uniquePaths(int m, int n) {
+        int[][] dp = new int[m][n];
+        // 第一行和第一列初始化为 1
+        for(int i = 0; i < m; i++){
+            dp[i][0] = 1;
+        }
+
+        for(int i = 0; i < n; i++){
+            dp[0][i] = 1;
+        }
+
+        for(int i = 1; i < m; i++){
+            for(int j = 1; j < n; j++){
+                // 到达当前格子的路 =【到达上面的格子的路径种数 + 到达左边格子的路径种数】
+                dp[i][j] = dp[i][j-1] + dp[i-1][j];
+            }
+        }
+
+        return dp[m-1][n-1];
+    }
+}
+```
+
+
+
+### 九十二、最小路径和
+
+```java
+class Solution {
+    public int minPathSum(int[][] grid) {
+        int row = grid.length;
+        int column = grid[0].length;
+
+        for(int i = 1; i < row; i++){
+            grid[i][0] += grid[i-1][0];
+        }
+
+        for(int i = 1; i < column; i++){
+            grid[0][i] += grid[0][i-1];
+        }
+
+        for(int i = 1; i < row; i++){
+            for(int j = 1; j < column; j++){
+                // 选择较小的一条路径
+                grid[i][j] += Math.min(grid[i-1][j], grid[i][j-1]);
+            }
+        }
+
+        return grid[row-1][column-1];
+    }
+}
+```
+
+
+
+### 九十三、最长回文子串（难）
+
+使用一个二维数组 `dp[i][j]` 表示子串 `s[i...j]` 是否是回文串
+
+```java
+public class Solution {
+    public String longestPalindrome(String s) {
+        int n = s.length();
+        if (n < 2) return s;
+
+        boolean[][] dp = new boolean[n][n];
+        int start = 0, maxLength = 1;
+
+        for (int i = 0; i < n; i++) {
+            dp[i][i] = true; // 单个字符是回文串
+        }
+
+        for (int j = 1; j < n; j++) {
+            for (int i = 0; i < j; i++) {
+                if (s.charAt(i) == s.charAt(j)) {
+                    if (j - i < 3) {
+                        dp[i][j] = true; // 处理长度为2或3的子串
+                    } else {
+                        dp[i][j] = dp[i + 1][j - 1]; // 更长的子串依赖于内层子串是否回文
+                    }
+                }
+
+                if (dp[i][j] && j - i + 1 > maxLength) {
+                    maxLength = j - i + 1;
+                    start = i;
+                }
+            }
+        }
+
+        return s.substring(start, start + maxLength);
+    }
+}
+```
+
