--- a/数据结构题目/暑假算法练习.md
+++ b/数据结构题目/暑假算法练习.md
@@ -4323,3 +4323,108 @@ public class Solution {
 }
 ```
 
+
+
+### 九十四、最长公共子序列
+
+```java
+class Solution {
+    public int longestCommonSubsequence(String text1, String text2) {
+        int len1 = text1.length();
+        int len2 = text2.length();
+
+        int[][] dp = new int[len1][len2];
+        dp[0][0] = text1.charAt(0) == text2.charAt(0) ? 1 : 0;
+
+        // 初始化第一行和第一列
+        for(int i = 1; i < len1; i++){
+            dp[i][0] = text1.charAt(i) == text2.charAt(0) ? 1 : dp[i-1][0];
+        }
+        for(int i = 1; i < len2; i++){
+            dp[0][i] = text1.charAt(0) == text2.charAt(i) ? 1 : dp[0][i-1];
+        }
+
+        for(int i = 1; i < len1; i++){
+            for(int j = 1; j < len2; j++){
+                if(text1.charAt(i) == text2.charAt(j)){
+                    // 如果相等
+                    dp[i][j] = dp[i-1][j-1] + 1;
+                }else{
+                    // 如果不相等
+                    dp[i][j] = Math.max(dp[i-1][j], dp[i][j-1]);
+                }
+            }
+        }
+
+        return dp[len1 - 1][len2 - 1];
+    }
+}
+```
+
+
+
+### 九十五、编辑距离（难）
+
+```java
+class Solution {
+    public int minDistance(String word1, String word2) {
+        int m = word1.length();
+        int n = word2.length();
+
+        // dp[i][j]表示word1的前i个字符和word2的前j个字符的最小编辑距离
+        int[][] dp = new int[m + 1][n + 1];
+
+        // 初始化dp数组
+        for (int i = 0; i <= m; i++) {
+            dp[i][0] = i; // word2为空字符串时，把word1转换为word2所需的编辑距离
+        }
+
+        for (int j = 0; j <= n; j++) {
+            dp[0][j] = j; // word1为空字符串时，把word2转换为word1所需的编辑距离
+        }
+
+        // 填充dp数组
+        for (int i = 1; i <= m; i++) {
+            for (int j = 1; j <= n; j++) {
+                if (word1.charAt(i - 1) == word2.charAt(j - 1)) {
+                    dp[i][j] = dp[i - 1][j - 1]; // 如果字符相等，不需要额外操作
+                } else {
+                    dp[i][j] = Math.min(dp[i - 1][j - 1], // 替换操作
+                               Math.min(dp[i - 1][j],    // 删除操作
+                                        dp[i][j - 1]))   // 插入操作
+                               + 1;
+                }
+            }
+        }
+
+        return dp[m][n];
+    }
+}
+```
+
+
+
+## 十六、技巧
+
+### 九十六、只出现一次的数字
+
+```java
+class Solution {
+    public int singleNumber(int[] nums) {
+        Set<Integer> set = new HashSet<>();
+        int result = 0;
+
+        for(int i = 0; i < nums.length; i++){
+            if(set.contains(nums[i])){
+                result -= nums[i];
+            }else{
+                result += nums[i];
+                set.add(nums[i]);
+            }
+        }
+
+        return result;
+    }
+}
+```
+
