--- a/数据结构题目/暑假算法练习.md
+++ b/数据结构题目/暑假算法练习.md
@@ -4428,3 +4428,176 @@ class Solution {
 }
 ```
 
+
+
+### 九十七、多数元素
+
+#### 做法一：投票
+
+1. **候选人选择**：我们使用 `candidate` 变量来保存当前的多数元素候选人，并通过 `count` 变量来计数。
+
+2. 遍历数组
+
+   ：
+
+   - 当 `count` 为 0 时，说明前面部分的数字已经无法确定多数元素，所以将 `candidate` 更新为当前的数字。
+   - 如果当前数字等于 `candidate`，则计数 `count` 加 1，否则减 1。
+
+3. **返回结果**：在遍历完数组后，`candidate` 即为多数元素。
+
+```java
+public class Solution {
+    public int majorityElement(int[] nums) {
+        int count = 0;
+        Integer candidate = null;
+
+        for (int num : nums) {
+            if (count == 0) {
+                candidate = num;
+            }
+            count += (num == candidate) ? 1 : -1;
+        }
+
+        return candidate;
+    }
+}
+
+```
+
+
+
+#### 做法二：排序
+
+如果将数组 `nums` 中的所有元素按照单调递增或单调递减的顺序排序，那么下标为 ⌊n/2⌋ 的元素（下标从 `0` 开始）一定是众数。
+
+```java
+class Solution {
+    public int majorityElement(int[] nums) {
+        Arrays.sort(nums);
+        return nums[nums.length / 2];
+    }
+}
+```
+
+
+
+### 九十八、颜色分类
+
+```java
+class Solution {
+    public void sortColors(int[] nums) {
+        int low = 0, mid = 0;
+        int high = nums.length - 1;
+
+        while (mid <= high) {
+            switch (nums[mid]) {
+                case 0: // 红色，应该放到最左边
+                    swap(nums, low, mid);
+                    low++;
+                    mid++;
+                    break;
+                case 1: // 白色，应该留在中间
+                    mid++;
+                    break;
+                case 2: // 蓝色，应该放到最右边
+                    swap(nums, mid, high);
+                    high--;
+                    break;
+            }
+        }
+    }
+
+    private void swap(int[] nums, int i, int j) {
+        int temp = nums[i];
+        nums[i] = nums[j];
+        nums[j] = temp;
+    }
+}
+```
+
+
+
+### 九十九、下一个排列
+
+```java
+public class Solution {
+    public void nextPermutation(int[] nums) {
+        int i = nums.length - 2;
+        // Step 1: 从后往前找到第一个降序的位置
+        while (i >= 0 && nums[i] >= nums[i + 1]) {
+            i--;
+        }
+        
+        // Step 2: 如果找到了一个这样的数
+        if (i >= 0) {
+            int j = nums.length - 1;
+            // 找到一个比nums[i]大的数，并交换
+            while (nums[j] <= nums[i]) {
+                j--;
+            }
+            swap(nums, i, j);
+        }
+        
+        // Step 3: 将i后面的数逆序排列
+        reverse(nums, i + 1);
+    }
+    
+    private void swap(int[] nums, int i, int j) {
+        int temp = nums[i];
+        nums[i] = nums[j];
+        nums[j] = temp;
+    }
+    
+    private void reverse(int[] nums, int start) {
+        int left = start, right = nums.length - 1;
+        while (left < right) {
+            swap(nums, left, right);
+            left++;
+            right--;
+        }
+    }
+}
+```
+
+
+
+### 一百、寻找重复数
+
+### 原理详解
+
+1. **链表环检测**：
+   - 假设数组中存在一个重复的数字，这意味着有多个索引指向相同的数字。这种情况下，将数组看作链表，会导致链表中出现环。
+   - 例如，对于数组 `nums = [1, 3, 4, 2, 2]`，可以将其转换为链表：`1 -> 3 -> 2 -> 4 -> 2`，你会发现 `2` 会形成环。
+2. **快慢指针**：
+   - 使用两个指针 slow和 fast，起始时都指向数组的第一个元素。然后进行迭代：
+     - `slow` 指针每次移动一步，即 `slow = nums[slow]`。
+     - `fast` 指针每次移动两步，即 `fast = nums[nums[fast]]`。
+   - 由于 `fast` 指针移动得比 `slow` 指针快，如果链表中存在环，那么 `slow` 和 `fast` 最终会在环中相遇。
+3. **找到环的入口**：
+   - 当 `slow` 和 `fast` 相遇后，将 `fast` 指针重新指向数组的起点，并且将 `fast` 和 `slow` 指针都以相同的速度（每次移动一步）前进。
+   - 他们相遇的地方就是环的入口，也就是重复的数字所在的位置。
+
+```java
+public class Solution {
+    public int findDuplicate(int[] nums) {
+        int slow = nums[0];
+        int fast = nums[0];
+        
+        // 快慢指针相遇
+        do {
+            slow = nums[slow];
+            fast = nums[nums[fast]];
+        } while (slow != fast);
+        
+        // 找到入口点
+        fast = nums[0];
+        while (fast != slow) {
+            fast = nums[fast];
+            slow = nums[slow];
+        }
+        return slow;
+    }
+}
+
+```
+
